src/pages/DetailsPage/DetailsPage.module.css
.detailsPage {
  width: 100%;
  height: calc(100vh - 61px);
  height: 100vh;
  display: grid;
  grid-template-rows: repeat(16, minmax(auto, 1fr));
  grid-template-columns: repeat(16, minmax(1rem, 1fr));
  padding-left: 1rem;
  padding-top: 4rem;
  background-color: #fff;
}

.detailsPage img {
  width: 100%;
  height: 100%;
}

/* 09017883245 */

.map {
  display: flex;
  flex-direction: column;
  margin-top: 1rem;
  width: 100%;
  overflow: clip;
  grid-column: 1 / 10;
  grid-row: 11 / -1;
  background-color: #fff;
}

.map nav {
  display: flex;
  align-items: center;
  z-index: 2;
  margin-bottom: 0.3rem;
  /* background-color: #fff; */
}

.map ul {
  max-height: min-content;
  display: flex;
  align-items: center;
  overflow: scroll;
  gap: 0.5rem;
}

.map li {
  cursor: pointer;
  font-size: 0.9rem;
  background-color: var(--light-1);
  padding: 0.1rem 0.5rem;
  border-radius: 0.2rem;
  width: auto;
}

.map li:nth-child(3) {
  color: var(--light-1);
  background-color: var(--dark-2);
}

.map img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  min-zoom: 20%;
}

.right {
  position: relative;
  background-color: #fff;
  padding-left: 2rem;
  padding-right: 1rem;
  overflow-y: auto;
  grid-column: 10 /-1;
  grid-row: 1 /-1;
  font-size: 1rem;
}

.section1 {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
}

.actions svg {
  color: var(--accent);
}

.actions {
  position: absolute;
  top: 1rem;
  right: 1rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.actions span {
  cursor: pointer;
  /* border-radius: 50%; */
}

.share {
  top: 1rem;
  right: 0rem;
  color: var(--accent);
  cursor: pointer;
  background-color: var(--light-2);
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 0.3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.bookmarkWrapper {
  top: 1rem;
  right: 2rem;
}

.section1Bottom {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  align-items: flex-start;
  justify-content: space-between;
  margin-top: 1.4rem;
}

.section1Links {
  display: flex;
  gap: 1rem;
}

.section1Links > a,
button {
  text-transform: uppercase;
  font-weight: bold;
  background-color: var(--dark-2);
  padding: 0.5rem 0.5rem;
  color: #fff;
  border-radius: 0.2rem;
  font-size: 0.8rem;
  cursor: pointer;
  white-space: nowrap;
}

.section1Links > a:nth-child(2) {
  background-color: var(--light-2);
  color: var(--dark-2);
}

.section1Links > button:last-child {
  background-color: var(--accent);
}

.section2 {
  text-align: start;
  /* position: relative; */
  /* display: flex; */
  /* flex-direction: column; */
  /* align-items: flex-start; */
}

.section2 p {
  font-size: small;
}

.section3 h2 {
  margin-bottom: 0.8rem;
}

.features {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 2rem);
  gap: 1.5rem 0;
}

.features div {
  display: flex;
  align-items: center;
  gap: 0 1rem;
}

.features div span {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  padding: 0.2rem;
  border-radius: 0.3rem;
  background-color: var(--light-1);
  color: var(--gray-1);
}

.features div div {
  /* text-align: center; */
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.features div div small:first-child {
  color: var(--gray-1);
}

.features div div small:last-child {
  font-weight: bold;
  text-transform: capitalize;
}

.ADsection {
  margin-top: 1rem;
  flex: 1;
  padding: 0.5rem;
  width: 100%;
}
.ADsection div {
  background-color: #ff6f0030;
  border-radius: 1rem;
  width: 100%;
  height: 100%;
  color: #ff6f0080;
  display: flex;
  align-items: center;
  justify-content: center;
  /* font-weight: bold; */
  font-size: 3rem;
}

/* @media (max-width: 860px) { */
@media (max-width: 640px) {
  .detailsPage {
    width: 100%;
    /* height: calc(100vh - 53px); */
    height: auto;
    display: grid;
    /* grid-template-rows: repeat(auto, minmax(auto, 1fr)); */
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-rows: 17rem auto 17rem;
    grid-template-columns: repeat(10, minmax(1rem, 1fr));
    grid-template-areas:
      "."
      "element1"
      "element2";
    grid-auto-flow: column;
    padding: 0;
  }

  .right {
    grid-area: element1;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-left: 0;
    padding: 1rem 1rem 0 1rem;
    border-radius: 1rem 1rem 0 0;
    gap: 1rem;
    grid-column: 1 /-1;
    /* grid-row: 4 /14; */
    /* transform: translateY(17rem); */
    /* margin-top: 17rem; */
  }

  .dragLine {
    /* position: absolute; */
    width: 100px;
    height: 6px;
    border-radius: 2rem;
    background-color: rgba(63, 63, 63, 0.185);
  }

  .map {
    grid-area: element2;
    background-color: #fff;
    margin-top: 0;
    width: 100%;
    overflow: clip;
    grid-column: 1 / -1;
    /* grid-row: 14 / -1;  */
  }
}

